data/derived/sp14/progs/unify/prog0777.ml.out
Characters 135-139:
  let seen' = if List.mem h seen then seen in
                                      ^^^^
Error: This expression has type 'a list
       but an expression was expected of type unit
